kubernetes/applications/miniflux/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: miniflux
  namespace: apps
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: miniflux
